--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@supabase/supabase-js": "^2.49.1",
+    "bootstrap": "^5.3.3",
     "pinia": "^3.0.1",
     "vue": "^3.5.13"
   },
